# SmartHealthcareAssistant

./: .env  .replit  README.md  app.py  components.py  config.json  database.py  model_handler.py  password_validator.py  pyproject.toml  render.yaml  requirements.txt  styles.py  utils.py
.streamlit/: config.toml
uploads/: 974282b4-a834-4bbb-a170-151b65213687.docx
